tests/ok/statement-body-payloads.ari
fn main() -> i64 {
  var total = 0;

  {
    total += 1;
  }

  if total == 1 {
    total += 2;
  } else {
    total = 99;
  }

  while total < 6 {
    total += 1;
  }

  for value in 0..3 {
    total += value;
  }

  init i = 0, carry = total while i < 2 {
    carry += i;
  } next i + 1, carry

  return total + carry;
}
