tests/errors/while-non-bool.ari
fn main() -> i64 {
  let value = "no";
  while value {
    return 1;
  }
  return 0;
}
